Make flash messages fixed so they stay visible when scrolling

--- a/view/styles.css
+++ b/view/styles.css
@@ -11,8 +11,9 @@ tr:hover > .col-icons {
 }
 
 #flash-message-container {
-    position:absolute;
-    right: 0;
+    position:fixed;
+    right: 10px;
+    top: 10px;
     width: 350px;
     z-index: 9999;
 }
